SMQ-2706 - Add domain id to message topic (#2765)
