# http/handler.go
@@ -55,7 +55,7 @@ var (
 	errFailedParseSubtopic      = mgate.NewHTTPProxyError(http.StatusBadRequest, errors.New("failed to parse subtopic"))
 )
 
-var channelRegExp = regexp.MustCompile(`^\/?c\/([\w\-]+)\/m(\/[^?]*)?(\?.*)?$`)
+var channelRegExp = regexp.MustCompile(`^\/?m\/([\w\-]+)\/c\/([\w\-]+)(\/[^?]*)?(\?.*)?$`)
 
 // Event implements events.Event interface.
 type handler struct {
@@ -153,13 +153,14 @@ func (h *handler) Publish(ctx context.Context, topic *string, payload *[]byte) e
 		return mgate.NewHTTPProxyError(http.StatusUnauthorized, svcerr.ErrAuthentication)
 	}
 
-	chanID, subtopic, err := parseTopic(*topic)
+	domainID, chanID, subtopic, err := parseTopic(*topic)
 	if err != nil {
 		return mgate.NewHTTPProxyError(http.StatusBadRequest, err)
 	}
 
 	msg := messaging.Message{
 		Protocol: protocol,
+		Domain:   domainID,
 		Channel:  chanID,
 		Subtopic: subtopic,
 		Payload:  *payload,
@@ -167,6 +168,7 @@ func (h *handler) Publish(ctx context.Context, topic *string, payload *[]byte) e
 	}
 
 	ar := &grpcChannelsV1.AuthzReq{
+		DomainId:   domainID,
 		ClientId:   clientID,
 		ClientType: clientType,
 		ChannelId:  msg.Channel,
@@ -208,23 +210,24 @@ func (h *handler) Disconnect(ctx context.Context) error {
 	return nil
 }
 
-func parseTopic(topic string) (string, string, error) {
+func parseTopic(topic string) (string, string, string, error) {
 	// Topics are in the format:
-	// c/<channel_id>/m/<subtopic>/.../ct/<content_type>
+	// m/<domain_id>/c/<channel_id>/<subtopic>/.../ct/<content_type>
 	channelParts := channelRegExp.FindStringSubmatch(topic)
-	if len(channelParts) < 2 {
-		return "", "", errors.Wrap(errFailedPublish, errMalformedTopic)
+	if len(channelParts) < 3 {
+		return "", "", "", errors.Wrap(errFailedPublish, errMalformedTopic)
 	}
 
-	chanID := channelParts[1]
-	subtopic := channelParts[2]
+	domainID := channelParts[1]
+	chanID := channelParts[2]
+	subtopic := channelParts[3]
 
 	subtopic, err := parseSubtopic(subtopic)
 	if err != nil {
-		return "", "", errors.Wrap(errFailedParseSubtopic, err)
+		return "", "", "", errors.Wrap(errFailedParseSubtopic, err)
 	}
 
-	return chanID, subtopic, nil
+	return domainID, chanID, subtopic, nil
 }
 
 func parseSubtopic(subtopic string) (string, error) {
