# ws/api/requests.go
@@ -8,6 +8,7 @@ import "github.com/gorilla/websocket"
 type connReq struct {
 	clientKey string
 	chanID    string
+	domainID  string
 	subtopic  string
 	conn      *websocket.Conn
 }
